# MSTR

./: .gitignore  CMakeLists.txt
MSTR/: CMakeLists.txt
MSTR/src/: Core.h  MSTR.cpp  MSTR.h  Window.cpp  Window.h  pch.h  test.cpp
Scripts/: Win-GenProjects.bat
